# TheLastOfThem

./: .gitignore  .gitmodules  README.md  containerRun.sh  robotStart.sh
Activites/: CMake.md
Activites/act_ws/: README.md
Activites/act_ws/.catkin_tools/profiles/default/: devel_collisions.txt
Activites/act_ws/src/act0/: CMakeLists.txt  package.xml
Activites/act_ws/src/act0/config/: myParams.yaml
Activites/act_ws/src/act0/launch/: notMyFirst.launch
Activites/act_ws/src/act0/scripts/: pyCustTalker.py
Activites/act_ws/src/act0/src/: listener.cpp  loadParams.cpp  talker.cpp  talkerCustom.cpp
Activites/act_ws/src/actCam/: CMakeLists.txt
Activites/act_ws/src/actCam/src/: cameraPublisheer.cpp  cameraSubscriber.cpp
Activites/act_ws/src/custom_msgs/: CMakeLists.txt
Activites/act_ws/src/custom_msgs/msg/: point.msg
Activites/act_ws/src/diff_drive/: CMakeLists.txt
Activites/act_ws/src/diff_drive/scripts/: KF_noisyRoverControl.py  noisyRoverControl.py  rover.py  rover_control.py  simMontecarlo.py
Activites/act_ws/src/pendulo_no_lineal/: CMakeLists.txt
Activites/act_ws/src/pendulo_no_lineal/scripts/: KF_pendulum.py  KF_pendulum_controlled.py  pendulo.py  penduloControlado.py
Activites/act_ws/src/quaternions/: CMakeLists.txt  package.xml
Activites/act_ws/src/quaternions/src/: markerPub.cpp
Activites/act_ws/src/vision_nodes/: CMakeLists.txt
Activites/act_ws/src/vision_nodes/launch/: pointCloud.launch
Activites/act_ws/src/vision_nodes/src/: pointCloud.py  pointCloudNode.py
Activites/act_ws/src/vision_nodes/src/vision_nodes/: utils.py
Activites/cmakeHelloWorld/: CMakeLists.txt  binName
Activites/cmakeHelloWorld/include/: myLib.hpp
Activites/cmakeHelloWorld/libs/: myLib.cpp
Activites/cmakeHelloWorld/src/: helloWorld.cpp
Activites/puzzlebot_nacho/: rover_control.py
Activites/ros_ws/.catkin_tools/profiles/default/: devel_collisions.txt
Activites/ros_ws/src/custom_msgs/: CMakeLists.txt
Activites/ros_ws/src/custom_msgs/msg/: Cell.msg  GridMap.msg  pixel.msg  point.msg
Activites/ros_ws/src/oswaldo/: CMakeLists.txt  package.xml
Activites/ros_ws/src/oswaldo/config/: params.yaml
Activites/ros_ws/src/oswaldo/launch/: marker.launch  talker_py.launch
Activites/ros_ws/src/oswaldo/src/: camera_pub.cpp  camera_subscriber.cpp  listener.cpp  marker_pub.cpp  talker.cpp  talker_custom.cpp  talker_custom.py
Activites/ros_ws/src/vision_nodes/: CMakeLists.txt  package.xml  setup.py
Activites/ros_ws/src/vision_nodes/config/: params.yaml  params_cloud.yaml  params_grid.yaml  params_rrt.yaml
Activites/ros_ws/src/vision_nodes/launch/: laser_launch.launch  laser_map.launch  pcloud_node.launch  pcloud_node2.launch  talker_py.launch  trajectory_rrt.launch
Activites/ros_ws/src/vision_nodes/src/: basic_node.py  laser_map.py  occupacy_grid.py  pcloud_node.py  point_cloud.py  traj_generator.py
Activites/ros_ws/src/vision_nodes/src/vision_nodes/: conversions.py  trajectory_algs.py  utils.py
Updates from class/: pcloud_node.py
capy-bot_ws/: DeeperInsights.md  parzival_stark@10.42.0.128
capy-bot_ws/src/capycore/: CMakeLists.txt  package.xml
capy-bot_ws/src/capycore/config/: depth2lidar.yaml
capy-bot_ws/src/capycore/launch/: lidar.launch  lidarKalman.launch  map_hector.launch  mapping_launch.launch  odomKalman.launch
capy-bot_ws/src/custom_msgs/: CMakeLists.txt  package.xml
capy-bot_ws/src/custom_msgs/msg/: Path.msg  point.msg
capy-bot_ws/src/diff_drivetrain/: CMakeLists.txt  package.xml
capy-bot_ws/src/diff_drivetrain/config/: robotConstants.yaml
capy-bot_ws/src/diff_drivetrain/launch/: _controlCapy.txt  controlCapy.launch  kapy.launch  setDrivetrain.launch  teleCapy.launch
capy-bot_ws/src/diff_drivetrain/scripts/: cmd_vel2robot.py  control.py  control_legacy.py  kalman.py  odometry.py  odometry_legacy.py  synchronizer.py
capy-bot_ws/src/diff_drivetrain/src/: gobildaMotor.cpp  odometry.cpp
capy-bot_ws/src/vision_nodes/: CMakeLists.txt
capy-bot_ws/src/vision_nodes/config/: params_cloud2.yaml  params_grid.yaml  params_rrt.yaml
capy-bot_ws/src/vision_nodes/launch/: Exploration.launch  heatmap.launch  laser_map.launch  occupacy_grid.launch  path_p.launch  point_cloud.launch
capy-bot_ws/src/vision_nodes/src/: Exploration.py  heatmap.py  laser_map.py  mapmessage.txt  occupacy_grid.py  path_planning.py  pcloud_node.py  point_cloud.py  traj_generator.py
capy-bot_ws/src/vision_nodes/src/vision_nodes/: conversions.py  trajectory_algs.py  utils.py
capy-bot_ws/src/wifi_reader/: CMakeLists.txt  package.xml
capy-bot_ws/src/wifi_reader/scripts/: wifi_reader.py
